devops/specs/ui/ui-parts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: eu.gcr.io/the-mesh-254617/ui-design-ui:672141f-1616059894707 # {"$imagepolicy": "flux-system:ui-design"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
