devops/specs/ui/ui-parts-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ui
  namespace: ui
spec:
  hosts:
    - 'ui.monstrs.dev'
  gateways:
    - ui
  http:
    - route:
        - destination:
            host: ui
            port:
              number: 3000
